Fixed z-index for suggestions and added no result text

--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -10,6 +10,16 @@
     display: flex;
     flex-direction: column;
     gap: 2vw;
+    z-index: 1;
+}
+
+#no-result {
+    background-color: white;
+    margin-left: 10%;
+    width: fit-content;
+    padding: 5%;
+    border-radius: 10px;
+
 }
 
 @media only screen and (min-width: 1200px) {
