--- a/frontend/src/components/Search.css
+++ b/frontend/src/components/Search.css
@@ -9,6 +9,7 @@
     height: fit-content;
     width: 45%;
     margin-top: -15%;
+    z-index: 2;
 }
 
 .search-container {
